--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -16,7 +16,7 @@
 	limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="lineageparts_title">LineageOS Asetukset</string>
+    <string name="lineageparts_title">AxiomOS Asetukset</string>
     <string name="loading">Ladataan\u2026</string>
     <string name="dlg_ok">OK</string>
     <string name="cancel">Peruuta</string>
@@ -484,7 +484,7 @@
     <string name="trust_feature_selinux_explain">SELinux määrittelee millä prosesseilla on pääsy laitteesi tiedostoihin/polkuihin.\nTämä ehkäisee sovelluksia ja palveluita pääsemästä tiedostoihin joihin niiden ei kuuluisi päästä: tällä tavalla potentiaaliset haitalliset prosessit estetään, ja turvallisuutesi turvataan.</string>
     <string name="trust_feature_security_patches">Android-tietoturvakorjaukset</string>
     <string name="trust_feature_security_patches_value_base">Alusta: %1$s\nValmistaja: %2$s</string>
-    <string name="trust_feature_security_patches_explain">Google julkaisee tietoturvapäivityksiä kuukausittain yhteistyössä alustan valmistajien kanssa korjatakseen ongelmia joita haitalliset sovellukset voisivat käyttää ohittaakseen turvallisuusmäärityksiä ja aiheuttaakseen vahinkoa laitteellesi. Googlen julkaisemat päivitykset lisätään joka kuukausi kaikkiin tuettuihin laitteisiin, mutta suljettuun koodiin tehdyt muutokset voi julkaista vain laitteen valmistaja. Pitääksesi laitteesi turvassa, varmista että käytössä on aina tuore LineageOS-koontiversio, ja (jos mahdollista) laitevalmistajan versio on viimeisin LineageOS:n suosittelema.</string>
+    <string name="trust_feature_security_patches_explain">Google julkaisee tietoturvapäivityksiä kuukausittain yhteistyössä alustan valmistajien kanssa korjatakseen ongelmia joita haitalliset sovellukset voisivat käyttää ohittaakseen turvallisuusmäärityksiä ja aiheuttaakseen vahinkoa laitteellesi. Googlen julkaisemat päivitykset lisätään joka kuukausi kaikkiin tuettuihin laitteisiin, mutta suljettuun koodiin tehdyt muutokset voi julkaista vain laitteen valmistaja. Pitääksesi laitteesi turvassa, varmista että käytössä on aina tuore AxiomOS-koontiversio, ja (jos mahdollista) laitevalmistajan versio on viimeisin LineageOS:n suosittelema.</string>
     <string name="trust_feature_encryption">Salaus</string>
     <string name="trust_feature_encryption_value_enabled">Käytössä</string>
     <string name="trust_feature_encryption_value_nolock">Vaatii turvallisen lukitusnäytön</string>
