--- a/res/values-gd/strings.xml
+++ b/res/values-gd/strings.xml
@@ -16,7 +16,7 @@
 	limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="lineageparts_title">Roghainnean LineageOS</string>
+    <string name="lineageparts_title">Roghainnean AxiomOS</string>
     <string name="loading">’Ga luchdadh\u2026</string>
     <string name="dlg_ok">Ceart ma-thà</string>
     <string name="cancel">Sguir dheth</string>
@@ -498,7 +498,7 @@
     <string name="trust_feature_security_patches_value_new">Cho ùr ’s a ghabhas</string>
     <string name="trust_feature_security_patches_value_medium">Corra mìos ro shean</string>
     <string name="trust_feature_security_patches_value_old">Dh’fhalbh an ùine air</string>
-    <string name="trust_feature_security_patches_explain">Sgaoilidh Google ’s reiceadairean SoC brèidean tèarainteachd gach mìos a dhèiligeas ri easbhaidhean a b’ urrainn do dh’aplacaidean droch-rùnach a chleachdadh airson cuingeachaidhean tèarainteachd a sheachnadh is cron maireannach a dhèanamh air an uidheam agad. Thèid na brèidean a chuireas Google gu làimh a chur an sàs gach mìos air gach uidheam ris a bheil taic ach cha ghabh brèidean air còd fo shealbh a chur an sàs ach le dèanadair an uidheim agad. Airson an t-uidheam agad a chumail sàbhailte, dèan cinnteach gu bheil an togail agad dhe LineageOS cho ùr ’s a ghabhas an-còmhnaidh agus (ma tha seo iomchaidh) dèan cinnteach gun deach ìomhaigh an reiceadair agad ùrachadh dhan fhear as ùire a mholas LineageOS dhut.</string>
+    <string name="trust_feature_security_patches_explain">Sgaoilidh Google ’s reiceadairean SoC brèidean tèarainteachd gach mìos a dhèiligeas ri easbhaidhean a b’ urrainn do dh’aplacaidean droch-rùnach a chleachdadh airson cuingeachaidhean tèarainteachd a sheachnadh is cron maireannach a dhèanamh air an uidheam agad. Thèid na brèidean a chuireas Google gu làimh a chur an sàs gach mìos air gach uidheam ris a bheil taic ach cha ghabh brèidean air còd fo shealbh a chur an sàs ach le dèanadair an uidheim agad. Airson an t-uidheam agad a chumail sàbhailte, dèan cinnteach gu bheil an togail agad dhe AxiomOS cho ùr ’s a ghabhas an-còmhnaidh agus (ma tha seo iomchaidh) dèan cinnteach gun deach ìomhaigh an reiceadair agad ùrachadh dhan fhear as ùire a mholas LineageOS dhut.</string>
     <string name="trust_feature_encryption">Crioptachadh</string>
     <string name="trust_feature_encryption_value_enabled">An comas</string>
     <string name="trust_feature_encryption_value_nolock">Feumach air sgrìn-ghlasaidh thèarainte</string>
