--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -16,7 +16,7 @@
 	limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="lineageparts_title">Configuració de LineageOS</string>
+    <string name="lineageparts_title">Configuració de AxiomOS</string>
     <string name="loading">S\'està carregant\u2026</string>
     <string name="dlg_ok">D\'ACORD</string>
     <string name="cancel">Cancel·la</string>
@@ -498,7 +498,7 @@
     <string name="trust_feature_security_patches_value_new">Actualitzat</string>
     <string name="trust_feature_security_patches_value_medium">Obsolet uns mesos</string>
     <string name="trust_feature_security_patches_value_old">Obsolet</string>
-    <string name="trust_feature_security_patches_explain">Els pegats de seguretat són publicats mensualment per Google en cooperació amb proveïdors de SoC per abordar falles que podrien ser explotades per aplicacions malicioses per eludir les restriccions de seguretat i causar danys permanents al dispositiu. Els pegats posats a disposició per Google s\'apliquen tots els mesos en tots els dispositius compatibles, però els pegats per al codi propietari només poden ser aplicats pel fabricant del dispositiu. Per mantenir el dispositiu segur, assegureu-vos que la compilació de LineageOS estigui sempre actualitzada i, si és possible, assegureu-vos que la imatge del proveïdor estigui actualitzada a la més recent recomanada per LineageOS.</string>
+    <string name="trust_feature_security_patches_explain">Els pegats de seguretat són publicats mensualment per Google en cooperació amb proveïdors de SoC per abordar falles que podrien ser explotades per aplicacions malicioses per eludir les restriccions de seguretat i causar danys permanents al dispositiu. Els pegats posats a disposició per Google s\'apliquen tots els mesos en tots els dispositius compatibles, però els pegats per al codi propietari només poden ser aplicats pel fabricant del dispositiu. Per mantenir el dispositiu segur, assegureu-vos que la compilació de AxiomOS estigui sempre actualitzada i, si és possible, assegureu-vos que la imatge del proveïdor estigui actualitzada a la més recent recomanada per LineageOS.</string>
     <string name="trust_feature_encryption">Xifrat</string>
     <string name="trust_feature_encryption_value_enabled">Activat</string>
     <string name="trust_feature_encryption_value_nolock">Necessita una pantalla de bloqueig segura</string>
