--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -16,7 +16,7 @@
 	limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="lineageparts_title">LineageOS\'i seaded</string>
+    <string name="lineageparts_title">AxiomOS\'i seaded</string>
     <string name="loading">Laadimine\u2026</string>
     <string name="dlg_ok">OK</string>
     <string name="cancel">Tühista</string>
@@ -489,7 +489,7 @@ andmete eelvaade.</string>
     <string name="trust_feature_security_patches_value_new">Ajakohane</string>
     <string name="trust_feature_security_patches_value_medium">Paar kuud vana</string>
     <string name="trust_feature_security_patches_value_old">Vananenud</string>
-    <string name="trust_feature_security_patches_explain">Google väljastab iga kuu turvapaikasid koostöös SoC tarnijatega, parandamaks vigu, mida võivad pahatahtlikud rakendused ära kasutada, et pääseda mööda turvapiirangutest ning põhjustada püsivat kahju sinu seadmele. Paigad, mille Google väljastab rakendatakse iga kuu kõikidele toetatud seadmetele, aga omandiõigustega koodile saab paiku määrata ainult sinu seadme tootja. Et hoida oma seade turvalisena, veendu, et sinu LineageOS järk on alati kaasaegne ning (võimalusel) veendu, et sinu tarnija tõmmis on uuendatud LineageOS\'i poolt viimasena soovitatud versioonile.</string>
+    <string name="trust_feature_security_patches_explain">Google väljastab iga kuu turvapaikasid koostöös SoC tarnijatega, parandamaks vigu, mida võivad pahatahtlikud rakendused ära kasutada, et pääseda mööda turvapiirangutest ning põhjustada püsivat kahju sinu seadmele. Paigad, mille Google väljastab rakendatakse iga kuu kõikidele toetatud seadmetele, aga omandiõigustega koodile saab paiku määrata ainult sinu seadme tootja. Et hoida oma seade turvalisena, veendu, et sinu AxiomOS järk on alati kaasaegne ning (võimalusel) veendu, et sinu tarnija tõmmis on uuendatud LineageOS\'i poolt viimasena soovitatud versioonile.</string>
     <string name="trust_feature_encryption">Krüpteerimine</string>
     <string name="trust_feature_encryption_value_enabled">Lubatud</string>
     <string name="trust_feature_encryption_value_nolock">Vajab turvalist lukustuskuva</string>
