--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -16,7 +16,7 @@
 	limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="lineageparts_title">LineageOS Postavke</string>
+    <string name="lineageparts_title">AxiomOS Postavke</string>
     <string name="loading">Učitavanje\u2026</string>
     <string name="dlg_ok">OK</string>
     <string name="cancel">Odustani</string>
