--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -16,7 +16,7 @@
 	limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="lineageparts_title">Setelan LineageOS</string>
+    <string name="lineageparts_title">Setelan AxiomOS</string>
     <string name="loading">Memuat\u2026</string>
     <string name="dlg_ok">OK</string>
     <string name="cancel">Batal</string>
