--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -16,7 +16,7 @@
 	limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="lineageparts_title">LineageOS の設定</string>
+    <string name="lineageparts_title">AxiomOS の設定</string>
     <string name="loading">読み込み中\u2026</string>
     <string name="dlg_ok">OK</string>
     <string name="cancel">キャンセル</string>
