--- a/res/values-kab-rDZ/strings.xml
+++ b/res/values-kab-rDZ/strings.xml
@@ -16,7 +16,7 @@
 	limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="lineageparts_title">Iγewwaṛen n LineageOS</string>
+    <string name="lineageparts_title">Iγewwaṛen n AxiomOS</string>
     <string name="loading">Asali\u2026</string>
     <string name="dlg_ok">Ok</string>
     <string name="cancel">Sefex</string>
