--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -16,7 +16,7 @@
 	limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="lineageparts_title">Nastavitve LineageOS</string>
+    <string name="lineageparts_title">Nastavitve AxiomOS</string>
     <string name="loading">Nalaganje \u2026</string>
     <string name="dlg_ok">V redu</string>
     <string name="cancel">Prekliči</string>
@@ -505,7 +505,7 @@
     <string name="trust_feature_security_patches_value_new">Posodobljeno</string>
     <string name="trust_feature_security_patches_value_medium">Nekaj mesecev zastarelo</string>
     <string name="trust_feature_security_patches_value_old">Zastarelo</string>
-    <string name="trust_feature_security_patches_explain">Varnostni popravki so izdani mesečno s strani Googla v sodelovanju s proizvajalci SoC-ov, da naslovijo pomanjkljivosti, ki jih lahko zlonamerne aplikacije izrabijo za obvoz varnostnih omejitev in lahko povzročijo trajne poškodbe vaše naprave. Popravki s strani Googla so na vseh podprtih napravah uveljavljeni vsak mesec, vendar so lahko popravki lastniške kode uveljavljeni samo s strani proizvajalca naprave. Da ohranite vašo napravo varno, poskrbite, da je vaša izgradnja LineageOS-a vedno posodobljena in (v kolikor je na voljo) odtis dobavitelja posodobobljen na zadnjo različico priporočeno s strani LineageOS-a.</string>
+    <string name="trust_feature_security_patches_explain">Varnostni popravki so izdani mesečno s strani Googla v sodelovanju s proizvajalci SoC-ov, da naslovijo pomanjkljivosti, ki jih lahko zlonamerne aplikacije izrabijo za obvoz varnostnih omejitev in lahko povzročijo trajne poškodbe vaše naprave. Popravki s strani Googla so na vseh podprtih napravah uveljavljeni vsak mesec, vendar so lahko popravki lastniške kode uveljavljeni samo s strani proizvajalca naprave. Da ohranite vašo napravo varno, poskrbite, da je vaša izgradnja AxiomOS-a vedno posodobljena in (v kolikor je na voljo) odtis dobavitelja posodobobljen na zadnjo različico priporočeno s strani LineageOS-a.</string>
     <string name="trust_feature_encryption">Šifriranje</string>
     <string name="trust_feature_encryption_value_enabled">Omogočeno</string>
     <string name="trust_feature_encryption_value_nolock">Potreben je varni zaklenjen zaslon</string>
