--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -16,7 +16,7 @@
 	limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="lineageparts_title">LineageOS 設定</string>
+    <string name="lineageparts_title">AxiomOS 設定</string>
     <string name="loading">載入中\u2026</string>
     <string name="dlg_ok">確定</string>
     <string name="cancel">取消</string>
@@ -485,7 +485,7 @@
     <string name="trust_feature_security_patches_value_new">已是最新</string>
     <string name="trust_feature_security_patches_value_medium">幾個月未更新</string>
     <string name="trust_feature_security_patches_value_old">已過期</string>
-    <string name="trust_feature_security_patches_explain">安全性修補由 Google 和 SoC 廠商每月發佈，用以修復可能會被惡意應用程式利用、繞過安全限制對您的裝置造成暫時或永久損壞的缺陷。\n平台修補每個月都會統一更新，但廠商修補只能每次從 OEM 取得。\n要保證您的裝置安全，請使用最新的 LineageOS 版本。</string>
+    <string name="trust_feature_security_patches_explain">安全性修補由 Google 和 SoC 廠商每月發佈，用以修復可能會被惡意應用程式利用、繞過安全限制對您的裝置造成暫時或永久損壞的缺陷。\n平台修補每個月都會統一更新，但廠商修補只能每次從 OEM 取得。\n要保證您的裝置安全，請使用最新的 AxiomOS 版本。</string>
     <string name="trust_feature_encryption">加密</string>
     <string name="trust_feature_encryption_value_enabled">已啟用</string>
     <string name="trust_feature_encryption_value_nolock">需要設定鎖定畫面密碼</string>
